changed btn colour

--- a/pages/services.html
+++ b/pages/services.html
@@ -13,6 +13,7 @@
         * {
             margin: 0px;
             padding: 0px;
+            box-sizing: borderdanger;
             font-family: "Space Grotesk", sans-serif;
         }
 
@@ -91,33 +92,33 @@
         <hr class="mx-auto fs-bold">
         <h1 class="text-center">Buy any ice cream @ get One Free</h1>
 
-        <div class="row">
+        <div class="row mx-4">
             <div class="col-12 col-sm-12 col-md-4 m-auto">
-                <div class="card border-0 shadow text-center my-3 mx-3 blue-moon">
+                <div class="card border-0 shadow text-center mt-5 blue-moon">
                     <div class="card-body">
                         <p class="fs-4">Raspberry Flavour</p>
                         <p class="fs-2 fw-bold text-dark ">Blue Moon</p>
-                        <a href="#"> <button type="button" class="btn btn-dark px-5 rounded-5 fs-4">Buy</button></a>
+                        <a href="#"> <button type="button" class="btn btn-danger px-5 rounded-5 fs-4">Buy</button></a>
                     </div>
                 </div>
             </div>
 
             <div class="col-12 col-sm-12 col-md-4 m-auto">
-                <div class="card border-0 shadow text-center my-3 mx-3 neapolitan">
+                <div class="card border-0 shadow text-center  mt-5 neapolitan">
                     <div class="card-body">
                         <p class="fs-4">Meld of Flavor</p>
                         <p class="fs-2 fw-bold text-dark "> Neapolitan</p>
-                        <a href="#"> <button type="button" class="btn btn-dark px-5 rounded-5 fs-4">Buy</button></a>
+                        <a href="#"> <button type="button" class="btn btn-danger px-5 rounded-5 fs-4">Buy</button></a>
                     </div>
                 </div>
             </div>
 
             <div class="col-12 col-sm-12 col-md-4 m-auto">
-                <div class="card border-0 shadow text-center my-3 mx-3 lucuma">
+                <div class="card border-0 shadow text-center  mt-5 lucuma">
                     <div class="card-body">
                         <p class="fs-4">Natural Sweetness </p>
                         <p class="fs-2 fw-bold text-dark ">Lucuma</p>
-                        <a href="#"> <button type="button" class="btn btn-dark px-5 rounded-5 fs-4">Buy</button></a>
+                        <a href="#"> <button type="button" class="btn btn-danger px-5 rounded-5 fs-4">Buy</button></a>
                     </div>
                 </div>
             </div>
