--- a/pages/buy_now.html
+++ b/pages/buy_now.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buy Now Form</title>
-<link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
   <form id="buyNowForm">
@@ -20,6 +20,7 @@
   <button type="submit">Submit</button>
 </form>
 
+<script src="buy_now.js"></script>
 
   </body>
   </html>  
