changed Heading colour colour

--- a/pages/services.html
+++ b/pages/services.html
@@ -39,7 +39,9 @@
             background-position: center;
             width: 400px;
             height: 550px;
+            object-fit: fill;
             color: #4dc1be;
+            border: 1px solid red;
         }
         .neapolitan{
             background: url(./../imgs/services/Neapolitan.jpg) no-repeat;
@@ -47,14 +49,16 @@
             background-position: center;
             width: 400px;
             height: 550px;
+            object-fit: fill;
             color: #d3d07f;
         }
         .lucuma{
-            background: url(./../imgs/services/Neapolitan.jpg) no-repeat;
+            background: url(./../imgs/services/Lucuma.webp) no-repeat;
             background-size: cover;
             background-position: center;
             width: 400px;
             height: 550px;
+            object-fit: fill;
             color: #938700;
         }
 
@@ -71,7 +75,7 @@
 <body>
 
     <section>
-        <h1 class="text-center mt-3 display-3 fw-bold">Our services</h1>
+        <h1 class="text-center text-danger mt-3 display-3 fw-bold">Our services</h1>
         <hr class="mx-auto fs-bold">
         <p class="text-center text-muted">we provide best services to our customers.</p>
 
@@ -88,9 +92,9 @@
             <p class="text-center text-muted">Open : 07:00 AM TO 06:00 PM</p>
         </div>
 
-        <h4 class="text-center fs-2">Find Your Test</h4>
+        <h4 class="text-center text-danger fs-2">Find Your Test</h4>
         <hr class="mx-auto fs-bold">
-        <h1 class="text-center">Buy any ice cream @ get One Free</h1>
+        <h1 class="text-center text-muted fs-2">Buy any ice cream @ get One Free</h1>
 
         <div class="row mx-4">
             <div class="col-12 col-sm-12 col-md-4 m-auto">
