modified:   pages/services.html

--- a/pages/services.html
+++ b/pages/services.html
@@ -13,7 +13,7 @@
         * {
             margin: 0px;
             padding: 0px;
-            box-sizing: borderdanger;
+            box-sizing: border-box;
             font-family: "Space Grotesk", sans-serif;
         }
 
@@ -32,33 +32,27 @@
             background-color: #fff;
 
         }
-
+        .offer-card{
+            width: 400px;
+            height: 550px;
+        }
         .blue-moon {
             background: url(./../imgs/services/blueMoon.jpg) no-repeat;
             background-size: cover;
-            background-position: center;
-            width: 400px;
-            height: 550px;
-            object-fit: fill;
+            background-position: center;           
             color: #4dc1be;
             border: 1px solid red;
         }
         .neapolitan{
             background: url(./../imgs/services/Neapolitan.jpg) no-repeat;
             background-size: cover;
-            background-position: center;
-            width: 400px;
-            height: 550px;
-            object-fit: fill;
+            background-position: center;           
             color: #d3d07f;
         }
         .lucuma{
             background: url(./../imgs/services/Lucuma.webp) no-repeat;
             background-size: cover;
             background-position: center;
-            width: 400px;
-            height: 550px;
-            object-fit: fill;
             color: #938700;
         }
 
@@ -68,6 +62,7 @@
             .time {
                 width: 80%;
             }
+
         }
     </style>
 </head>
@@ -75,7 +70,7 @@
 <body>
 
     <section>
-        <h1 class="text-center text-danger mt-3 display-3 fw-bold">Our services</h1>
+        <h1 class="text-center text-danger  display-3 fw-bold">Our services</h1>
         <hr class="mx-auto fs-bold">
         <p class="text-center text-muted">we provide best services to our customers.</p>
 
@@ -97,8 +92,8 @@
         <h1 class="text-center text-muted fs-2">Buy any ice cream @ get One Free</h1>
 
         <div class="row mx-4">
-            <div class="col-12 col-sm-12 col-md-4 m-auto">
-                <div class="card border-0 shadow text-center mt-5 blue-moon">
+            <div class="col-12 col-sm-12 col-md-4  m-auto">
+                <div class="card border-0 shadow text-center mt-5 offer-card blue-moon">
                     <div class="card-body">
                         <p class="fs-4">Raspberry Flavour</p>
                         <p class="fs-2 fw-bold text-dark ">Blue Moon</p>
@@ -108,7 +103,7 @@
             </div>
 
             <div class="col-12 col-sm-12 col-md-4 m-auto">
-                <div class="card border-0 shadow text-center  mt-5 neapolitan">
+                <div class="card border-0 shadow text-center  mt-5 offer-card neapolitan">
                     <div class="card-body">
                         <p class="fs-4">Meld of Flavor</p>
                         <p class="fs-2 fw-bold text-dark "> Neapolitan</p>
@@ -118,7 +113,7 @@
             </div>
 
             <div class="col-12 col-sm-12 col-md-4 m-auto">
-                <div class="card border-0 shadow text-center  mt-5 lucuma">
+                <div class="card border-0 shadow text-center  mt-5 offer-card lucuma">
                     <div class="card-body">
                         <p class="fs-4">Natural Sweetness </p>
                         <p class="fs-2 fw-bold text-dark ">Lucuma</p>
