--- a/Pages/about_us.html
+++ b/Pages/about_us.html
@@ -36,7 +36,7 @@ We Are An Awesome Agency.
         </div>
 
         <div class="mt-4">
-            <video controls class="video p-3 m-5"> <source src="/video/icecream-video.mp4" type="video/mp4" />
+            <video controls class="video p-3 m-5"> <source src="/video/about-page/icecream-video.mp4" type="video/mp4" />
             </video>
         </div>
 
