--- a/pages/buy_now.html
+++ b/pages/buy_now.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buy Now Form</title>
+    <title>Buy-Now-Form</title>
 
 </head>
 <body>
