--- a/pages/buy_now.html
+++ b/pages/buy_now.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buy-Now-Form</title>
+    <link rel="stylesheet" href="buy_now.css">
 
 </head>
 <body>
