--- a/pages/product_card.html
+++ b/pages/product_card.html
@@ -106,7 +106,7 @@
                  {
                      flavour.src = './img/oreo-cake2.png ';
                  }
-                 else if(b=='pineApple')
+                 else if(b=='pineApple')``
                  {
                      flavour.src = './img/pineApple2.png';
                  }
