--- a/pages/services.html
+++ b/pages/services.html
@@ -55,7 +55,7 @@
             color: #d3d07f;
         }
         .lucuma{
-            background: url(./../imgs/services/Neapolitan.jpg) no-repeat;
+            background: url(./../imgs/services/Lucuma.webp) no-repeat;
             background-size: cover;
             background-position: center;
             color: #938700;
