--- a/pages/login_page.html
+++ b/pages/login_page.html
@@ -7,3 +7,24 @@
     <title>Login-Page</title>
     <link rel="stylesheet" href="/login.css"/>
 </head>
+<body>
+    <div class="login-container">
+        <div class="m-1 p-3 text-center bolder fs-1"> <h1>Welcome To Creamy Desert</h1></div> <hr/>
+        <h2>Log-in Here!
+  </h2>
+        <form action="your-login-action.php" method="POST">
+            <input type="text" name="username" placeholder=" Enter Your Username" required >
+            <input type="password" name="password" placeholder="Enter Your Password" required>
+            <input type="submit" value="Login"> 
+        </form>
+        <div>
+            <button class="account my-3"> Don't Have an account &nbsp;<a href="" class="Register" > Register Now </a></button>
+        </div>
+    </div>
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+</html>
