--- a/pages/login_page.html
+++ b/pages/login_page.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Login-Page</title>
-    <link rel="stylesheet" href="/login.css"/>
+    <link rel="stylesheet" href="/css/login_page.css"/>
 </head>
 <body>
     <div class="login-container">
@@ -18,7 +18,7 @@
             <input type="submit" value="Login"> 
         </form>
         <div>
-            <button class="account my-3"> Don't Have an account &nbsp;<a href="" class="Register" > Register Now </a></button>
+            <button class="account my-3"> Don't Have an account &nbsp;<a href="./registration.html" class="Register" > Register Now </a></button>
         </div>
     </div>
 
