--- a/Pages/registration.html
+++ b/Pages/registration.html
@@ -7,36 +7,32 @@
     <title>Registration</title>
     <link rel="stylesheet" href="/css/login_page.css"/>
 </head>
-body>
+<body>
 
     <div class="p-3 m-5 bg-white text-black register-box  "> 
-
-
         <div class="m-1 p-3 text-center bolder fs-1"> <h1>Welcome To Creamy Desert</h1></div> <hr/>
         <div class="mb-5 mx-5  p-3 text-center fs-2"> <h1> <u> Register </u></h1></div>
-
       <div >
 
-       <div class="d-block m-3 fs-5">  <label for="name" > Enter Your Name : </label> 
-        <input type="text" id="name" style="margin-left: 4%;" required /> </div>
+       <div class="d-block m-3 fs-5"> <label for="name" > Enter Your Name </label> 
+        <input type="text" id="name" style="margin-left: 13%;" required /> </div>
 
-<div class="d-block m-3 fs-5">         <label for="email"> E-mail  : </label> 
-    <input type="email" id="email" style="margin-left: 19%;" required /></div>
+      <div class="d-block m-3 fs-5"> <label for="email"> E-mail </label> 
+    <input type="email" id="email" style="margin-left: 29%;" required /></div>
 
         <div class="d-block m-3 fs-5">
-            <label type="gender"> Gender : </label> 
-            <input type="radio" name="gender" style="margin-left: 18%;"/> Male 
+            <label type="gender"> Gender </label> 
+            <input type="radio" name="gender" style="margin-left: 28%;"/> Male 
             <input type="radio" name="gender" /> Female
             <input type="radio" name="gender" /> Others  
         </div>
             
-
       <div class="d-block m-3 fs-5"> <div class="row g-3 align-items-center">
         <div class="col-auto">
-          <label for="inputPassword6" class="col-form-label">Password :</label>
+          <label for="inputPassword6" class="col-form-label">Password </label>
         </div>
         <div class="col-auto">
-          <input type="password" id="inputPassword6"  aria-describedby="passwordHelpInline" style="margin-left: 32%;" required/>
+          <input type="password" id="inputPassword6"  aria-describedby="passwordHelpInline" style="margin-left: 55%;" required/>
         </div>
         <div class="flex">
           <span id="passwordHelpInline" class="form-text" required>
@@ -44,29 +40,16 @@ body>
           </span>
         </div>
       </div>       
-
     </div>
 
           <div class="d-block m-3 fs-5"> <button type="submit" class="btn btn-lg register-btn "> Register</button></div>
+
           <div>
             <button class="account my-3">  <a href="/Pages/login_page.html" style="color: #e83e8c;" >Back to log-In</a></button>
         </div>
-
       </div>
-
-
-
-
     </div>
 
-
-
-
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>  
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>  
 </body>
 </html>
