--- a/pages/buy_now.html
+++ b/pages/buy_now.html
@@ -15,7 +15,7 @@
     <label for="email">Email:</label>
   <input type="email" id="email" name="email" required><br><br>
 
-  <input for="address">address:</lable>
+     <label for="address">address:</lable>
   <input type="text" id="fullName" name="fullName" required><br><br>
 
   <button type="submit">Submit</button>
