--- a/pages/review_page.html
+++ b/pages/review_page.html
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Review page</title>
-    <link rel ="stylesheet" href="./../css/review_page.css">
+	<meta charset="UTF-8">
+	<meta name="viewport"
+		content="width=device-width, 
+				initial-scale=1.0">
+	<link rel="stylesheet" href="./../css/review_page.css">
+	<title>Reviews For Ice Cream Parlour</title>
 </head>
+
 <body>
-    <div class="container">
-        <h1>Our Ice Cream Parlour Reviews</h1>
-        <div class="rating">
-            <span id="rating">0</span>/5
-        </div>
-        <div class="stars" id="stars">
-            <span class="star" data-value ="1"><img src="./../imgs/star(2).png" /></span>
-        </div>
-    </div>
-    
+	<div class="container">
+		<h1>Our Ice Cream Parlour Review</h1>
+		<div class="rating">
+			<span id="rating">0</span>/5
+		</div>
+		<div class="stars" id="stars">
+			<span class="star" data-value="1">★</span>
+			<span class="star" data-value="2">★</span>
+			<span class="star" data-value="3">★</span>
+			<span class="star" data-value="4">★</span>
+			<span class="star" data-value="5">★</span>
+		</div>
+		<p>Share your review:</p>
+		<textarea id="review"
+				placeholder="Write your review here">
+		</textarea>
+		<button id="submit">Submit</button>
+		<div class="reviews" id="reviews">
+		</div>
+	</div>
 </body>
 </html>
+
