add css in index

--- a/index.html
+++ b/index.html
@@ -83,13 +83,18 @@
         </div>
     </div>
     <div class="Seller-container">
-       <center> <span class="headings">Our Best Seller</span>
+     <span class="headings ">Our Best Seller</span>
         <div class="flex seller-heading">
             <span>NEW ARRIVALS</span>
             <SPan>BEST SELLER</SPan>
             <span>TOP RATES</span>
 
-        </div></center>
+        </div>
+
+        <div class="product-container">
+            
+
+        </div>
     </div>
 
 </body>
