--- a/index.html
+++ b/index.html
@@ -92,7 +92,12 @@
         </div>
 
         <div class="product-container">
-            
+            <img src="./imgs/home/choco cherry.webp" class="products" alt="">
+            <div class="product-info">
+                <span class="product-name">Chocolate Cherry Cake</span>
+                <span class="price">$8.99</span>
+            </div>
+        </div>
 
         </div>
     </div>
