--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -102,7 +102,9 @@
    </div>
 </marquee>
  </div>
- 
+  <div class="filter-container">
+    <img src="./../icons/menupage-icons/filter.png" height="20px" alt="">Filter
+  </div>
 
   <div class="flavour-container">
 <div class="row  ">
