added offer slider

--- a/pages/services.html
+++ b/pages/services.html
@@ -37,26 +37,50 @@
 
         }
 
-        
+
         .blue-moon {
             background: url(./../imgs/services/blueMoon.jpg) no-repeat;
             background-size: cover;
             background-position: center;
             color: #4dc1be;
+            height: 500px;
         }
-        .neapolitan{
+
+        .neapolitan {
             background: url(./../imgs/services/Neapolitan.jpg) no-repeat;
             background-size: cover;
             background-position: center;
             color: #d3d07f;
+            height: 500px;
         }
-        .lucuma{
+
+        .lucuma {
             background: url(./../imgs/services/Lucuma.webp) no-repeat;
             background-size: cover;
             background-position: center;
             color: #938700;
+            height: 500px;
         }
 
+        .banner {
+            background: linear-gradient(-55deg, #ff7675 29%, #d63031 29.1%, #d63031 68%, #ff7675 68.1%);
+        }
+
+        .banner-flex {
+            flex: 1 1 250px;
+
+        }
+
+        .banner-container .banner .content .btn {
+            display: block;
+            height: 40px;
+            width: 150px;
+            line-height: 40px;
+            background: #fff;
+            color: #d63031;
+            margin: 5px auto;
+            text-decoration: none;
+        }
 
         /* Media Query */
 
@@ -93,38 +117,84 @@
         <hr class="mx-auto fs-bold">
         <h1 class="text-center text-muted fs-2">Buy any ice cream @ get One Free</h1>
 
-        <div class="row mx-4">
-            <div class="col-12 col-sm-12 col-md-4 m-auto">
-                <div class="card border-0 shadow text-center mt-5  blue-moon ">
-                    <div class="card-body pb-5 ">
-                        <p class="fs-4">Raspberry Flavour</p>
-                        <p class="fs-2 fw-bold  text-dark ">Blue Moon</p>
-                        <a href="#"> <button type="button" class="btn btn-danger px-5 rounded-5 fs-4">Buy</button></a>
+        <div id="carouselExampleDark" class="carousel carousel-dark slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="10000">
+                    <div class=" d-flex justify-content-center align-items-center">
+                        <div
+                            class="banner rounded-5 mt-3 mx-5 d-flex justify-content-center align-items-center flex-wrap shadow overflow-hidden ">
+                            <div class=" text-center p-5 banner-flex">
+                                <img src="./../imgs/services/b1.png" alt="banner" width="80%">
+                            </div>
+                            <div class="banner-flex text-center p-3 text-uppercase">
+                                <span class="text-light fs-2">upto</span>
+                                <h3 class="text-light">50% 0ff</h3>
+                                <p class="text-light fs-6 px-4">offer ends after 5 days</p>
+                                <a href="#" class="btn"> <button type="button" class="btn btn-danger px-5 rounded-5 fs-4">Buy</button></a>
+                            </div>
+                            <div class="women position-relative bottom-50 banner-flex">
+                                <img src="./../imgs/services/girl.png" alt="" width="100%">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                    <div class=" d-flex justify-content-center align-items-center">
+                        <div class="banner rounded-5 mt-3 mx-5 d-flex justify-content-center align-items-center flex-wrap shadow overflow-hidden ">
+                            <div class=" text-center p-5 banner-flex">
+                                <img src="./../imgs/services/b1.png" alt="banner" width="80%">
+                            </div>
+                            <div class="banner-flex text-center p-3 text-uppercase">
+                                <span class="text-light fs-2">upto</span>
+                                <h3 class="text-light">50% 0ff</h3>
+                                <p class="text-light fs-6 px-4">offer ends after 5 days</p>
+                                <a href="#" class="btn"> <button type="button" class="btn btn-danger px-5 rounded-5 fs-4">Buy</button></a>
+                            </div>
+                            <div class="women position-relative bottom-50 banner-flex">
+                                <img src="./../imgs/services/girl.png" alt="" width="100%">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class=" d-flex justify-content-center align-items-center">
+                        <div class="banner rounded-5 mt-3 mx-5 d-flex justify-content-center align-items-center flex-wrap shadow overflow-hidden ">
+                            <div class=" text-center p-5 banner-flex">
+                                <img src="./../imgs/services/b1.png" alt="banner" width="80%">
+                            </div>
+                            <div class="banner-flex text-center p-3 text-uppercase">
+                                <span class="text-light fs-2">upto</span>
+                                <h3 class="text-light">50% 0ff</h3>
+                                <p class="text-light fs-6 px-4">offer ends after 5 days</p>
+                                <a href="#" class="btn"> <button type="button" class="btn btn-danger px-5 rounded-5 fs-4">Buy</button></a>
+                            </div>
+                            <div class="women position-relative bottom-50 banner-flex">
+                                <img src="./../imgs/services/girl.png" alt="" width="100%">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-
-            <div class="col-12 col-sm-12 col-md-4 m-auto">
-                <div class="card border-0 shadow text-center  mt-5  neapolitan">
-                    <div class="card-body  pb-5">
-                        <p class="fs-4">Meld of Flavor</p>
-                        <p class="fs-2 fw-bold  text-dark "> Neapolitan</p>
-                        <a href="#"> <button type="button" class="btn btn-danger px-5 rounded-5 fs-4">Buy</button></a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-sm-12 col-md-4 m-auto">
-                <div class="card border-0 shadow text-center  mt-5  lucuma ">
-                    <div class="card-body  pb-5">
-                        <p class="fs-4">Natural Sweetness </p>
-                        <p class="fs-2 fw-bold  text-dark ">Lucuma</p>
-                        <a href="#"> <button type="button" class="btn btn-danger px-5 rounded-5 fs-4">Buy</button></a>
-                    </div>
-                </div>
-            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-      
+
         <div class="row my-5">
             <div class="col-12 col-sm-6 col-md-4 m-auto">
                 <div class="card border-0 shadow text-center my-3 mx-4">
@@ -176,10 +246,10 @@
             hrs.innerText = (date.getHours() < 10 ? "0" : "") + date.getHours() % 12 || 12;
             min.innerText = (date.getMinutes() < 10 ? "0" : "") + date.getMinutes();
             sec.innerText = (date.getSeconds() < 10 ? "0" : "") + date.getSeconds();
-            ampm.innerText = hrs >= 12 ? 'PM' : 'AM';
+            ampm.innerText = date.getHours() >= 12 ? 'PM' : 'AM';
 
             const openclose = document.getElementById('openclose');
-            if (date.getHours() >= 7 && date.getHours() <= 18) {
+            if (date.getHours() >= 7 && date.getHours() < 18) {
                 openclose.innerText = "OPENED";
             }
             else {
