--- a/pages/services.html
+++ b/pages/services.html
@@ -90,6 +90,11 @@
             }
 
         }
+        @media (max-width:768px) {
+            .women {
+                display: none;
+            }
+        }
     </style>
 </head>
 
