red heart for wishlist is added in icon/menucard addded.

--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -115,7 +115,7 @@
         <div class="effect-hover">
             <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
             <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px"  id="liked" onclick="likedfunction()" alt="">
         </div>
         <div class="flavour-description">
             Cereal And Milk <br>
@@ -214,6 +214,8 @@
   <footer>
     <p >&copy; 2024 Ice Cream Parlor</p>
   </footer>
-  <script src="script.js"></script>
+  <script src="script.js">
+   
+  </script>
 </body>
 </html>
