--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 
         </div>
 
-        <div class="product-container">
+        <!-- <div class="product-container">
             <img src="./imgs/home/choco cherry.webp" class="products" alt="">\i
             <div class="product-info">
                 <span class="product-name">Chocolate Cherry Cake</span>
                 <span class="price">$8.99</span>
             </div>
-        </div>
+        </div> -->
         <div class="flavour-container">
             <div class="row  ">
                 <div class=" flavour-card col col-md-2 col-lg-3">
@@ -197,8 +197,45 @@
                     </div>
                 </div>
 
+                <div class="flavour-card col col-md-2 col-lg-3">
+                    <div>
+                        <img src="./imgs/menu-card/Cookies-Dough.jpg" class="flavour-img" alt="">
+                    </div>
+                    <div class="effect-hover">
+                        <img src="./icons/menupage-icons/shopping-bag.png" height="20px">
+                        <img src="./icons/menupage-icons/search.png" height="20px" alt="">
+                        <img src="./icons/menupage-icons/wishlist.png" height="20px" alt="">
+                    </div>
+                    <div class="flavour-description">
+                        Cookies Dough
+                        <br>
+                        <p class="flavour-price">₹ 260.00 </p>
+                    </div>
+                </div>
+
+                <div class="flavour-card col col-md-2 col-lg-3">
+                    <div>
+                        <img src="./imgs/menu-card/Creamy-Cake.jpg" class="flavour-img" alt="">
+                    </div>
+                    <div class="effect-hover">
+                        <img src="./icons/menupage-icons/shopping-bag.png" height="20px">
+                        <img src="./icons/menupage-icons/search.png" height="20px" alt="">
+                        <img src="./icons/menupage-icons/wishlist.png" height="20px" alt="">
+                    </div>
+                    <div class="flavour-description">
+                        Creamy Cake
+                        <br>
+                        <p class="flavour-price">₹ 260.00 </p>
+                    </div>
+                </div>
+
 
             </div>
+        </div>
+
+
+        <div class="menu">
+
         </div>
 
 </body>
