applying js for liked and disliked

--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -215,7 +215,10 @@
     <p >&copy; 2024 Ice Cream Parlor</p>
   </footer>
   <script src="script.js">
-   
+    function likedfunction(){
+        let likeimg=document.getElementById("liked");
+        likeimg.src="./../icons/liked-red-heart.png";
+    }
   </script>
 </body>
 </html>
