--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -115,7 +115,7 @@
         <div class="effect-hover">
             <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
             <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-            <img src="./../icons/menupage-icons/wishlist.png" height="20px"  id="liked" onclick="likedfunction()" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px"  id="liked" onclick="likedfunction(lk)" alt="">
         </div>
         <div class="flavour-description">
             Cereal And Milk <br>
@@ -217,7 +217,16 @@
   <script src="script.js">
     function likedfunction(){
         let likeimg=document.getElementById("liked");
-        likeimg.src="./../icons/liked-red-heart.png";
+        if(lk==liked)
+        {
+            likeimg.src="./../icons/menupage-icons/liked-red-heart.png";
+            lk=unlike
+        }
+        else{
+            likeimg.src="./../icons/menupage-icons/whishlist";
+            lk=liked;
+        }
+       
     }
   </script>
 </body>
