--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="./JS/header.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
@@ -235,9 +236,52 @@
 
 
         <div class="menu">
+            <span class="ms-5 mt-6">ICE CREAM MENU</span>
+            <h2>Take The Experience Of Our Delightful</h2>
+            <h2>Ice Cream Menu
+            </h2>
 
         </div>
 
+
+
+
+
+        <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active flex">
+                <img src="./imgs/ba20.webp" class=" w-10 visit-img" alt="...">
+                <img src="./imgs/ba21.webp" class=" w-10 visit-img" alt="...">
+                <img src="./imgs/ba21.webp" class=" w-10 visit-img" alt="...">
+                <img src="./imgs/ba21.webp" class=" w-10 visit-img" alt="...">
+                <img src="./imgs/ba21.webp" class=" w-10 visit-img" alt="...">
+              </div>
+              <div class="carousel-item flex">
+                <img src="./imgs/ba21.webp" class=" w-10 visit-img" alt="...">
+                <img src="./imgs/ba22.webp" class=" w-10 visit-img" alt="...">
+                <img src="./imgs/ba22.webp" class=" w-10 visit-img" alt="...">
+                <img src="./imgs/ba22.webp" class=" w-10 visit-img" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./imgs/ba22.webp" class=" w-10 visit-img" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./imgs/ba19.webp" class=" w-10 visit-img" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./imgs/ba20.webp" class=" w-10 visit-img" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev prev-btn" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next prev-btn" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
