added offer 3 banner

--- a/pages/services.html
+++ b/pages/services.html
@@ -46,7 +46,11 @@
         }
         .banner2-badge{
             border: none;
-            border-radius: 50px 30px 50px  0     ;
+            border-radius: 50px 30px 50px  0 ;
+        }
+        .banner3{
+            background-color: #FBDA61;
+            background-image: linear-gradient(45deg, #FBDA61 0%, #FF5ACD 100%);
         }
         .banner-flex {
             flex: 1 1 250px;
@@ -103,7 +107,7 @@
 
         <h4 class="text-center text-danger fs-2">Find Your Test</h4>
         <hr class="mx-auto fs-bold">
-        <h1 class="text-center text-muted fs-2">Buy any ice cream @ get One Free</h1>
+        <h1 class="text-center text-muted fs-2">OFFER</h1>
 
         <div id="carouselExampleDark" class="carousel carousel-dark slide">
             <div class="carousel-indicators">
@@ -120,7 +124,7 @@
                         <div
                             class="banner1 rounded-5 mt-3 mx-5 d-flex justify-content-center align-items-center flex-wrap shadow overflow-hidden ">
                             <div class=" text-center p-5  banner-flex ">
-                                <img src="./../imgs/services/ban.png" class="border rounded-5 p-5" alt="banner"
+                                <img src="./../imgs/services/ban.png" class="border rounded-5 " alt="banner"
                                     width="80%">
                             </div>
                             <div class="banner-flex text-center p-3 text-uppercase">
@@ -138,10 +142,9 @@
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
                     <div class=" d-flex justify-content-center align-items-center">
-                        <div
-                            class="banner2 rounded-5 mt-3 mx-5 d-flex justify-content-center align-items-center flex-wrap shadow overflow-hidden ">
-                            <div class=" text-center p-5 ms-5 banner-flex"> 
-                                <img src="./../imgs/services/chokobar.png" class="border border-danger rounded-5 p-5" alt="banner"
+                        <div class="banner2 rounded-5 mt-3 mx-5 d-flex justify-content-center align-items-center flex-wrap shadow overflow-hidden ">
+                            <div class=" text-center p-5  banner-flex"> 
+                                <img src="./../imgs/services/chokobar.png" class="border border-danger rounded-5 " alt="banner"
                                     width="100%">
                             </div>
                             <div class="banner-flex text-center p-3 text-uppercase">
@@ -156,7 +159,7 @@
                                   </button>
                             </div>
                             <div class="women position-relative bottom-50 banner-flex">
-                                <img src="./../imgs/services/chokobar-boy.png" alt="" width="100%">
+                                <img src="./../imgs/services/chokobar-boy.png" alt="banner" width="100%">
                             </div>
                         </div>
                     </div>
@@ -164,19 +167,19 @@
                 <div class="carousel-item">
                     <div class=" d-flex justify-content-center align-items-center">
                         <div
-                            class="banner rounded-5 mt-3 mx-5 d-flex justify-content-center align-items-center flex-wrap shadow overflow-hidden ">
+                            class="banner3 rounded-5 mt-3 mx-5 d-flex justify-content-center align-items-center flex-wrap shadow overflow-hidden ">
                             <div class=" text-center p-5 banner-flex">
-                                <img src="./../imgs/services/b1.png" alt="banner" width="80%">
+                                <img src="./../imgs/services/vanila.png" class="border border-danger rounded-5 " alt="banner" width="80%">
                             </div>
                             <div class="banner-flex text-center p-3 text-uppercase">
-                                <span class="text-light fs-2">upto</span>
-                                <h3 class="text-light">50% 0ff</h3>
-                                <p class="text-light fs-6 px-4">offer ends after 5 days</p>
+                                <span class="text-light fs-1 fw-bolder">Buy Two</span>
+                                <h3 class="text-light">Get 1 </h3>
+                                <p class="text-light fs-6 px-4">offer ends after 10 days</p>
                                 <a href="#" class="btn"> <button type="button"
-                                        class="btn btn-danger px-5 mb-5 rounded-5 fs-4">Buy</button></a>
+                                        class="btn btn-danger px-5 mb-5 rounded-5 fs-4">Buy Now</button></a>
                             </div>
                             <div class="women position-relative bottom-50 banner-flex">
-                                <img src="./../imgs/services/girl.png" alt="" width="100%">
+                                <img src="./../imgs/services/free.png" alt="" width="80%">
                             </div>
                         </div>
                     </div>
