--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <script src="./JS/header.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
@@ -249,39 +250,68 @@
 
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
-              <div class="carousel-item active flex">
-                <img src="./imgs/ba20.webp" class=" w-10 visit-img" alt="...">
-                <img src="./imgs/ba21.webp" class=" w-10 visit-img" alt="...">
-                <img src="./imgs/ba21.webp" class=" w-10 visit-img" alt="...">
-                <img src="./imgs/ba21.webp" class=" w-10 visit-img" alt="...">
-                <img src="./imgs/ba21.webp" class=" w-10 visit-img" alt="...">
-              </div>
-              <div class="carousel-item flex">
-                <img src="./imgs/ba21.webp" class=" w-10 visit-img" alt="...">
-                <img src="./imgs/ba22.webp" class=" w-10 visit-img" alt="...">
-                <img src="./imgs/ba22.webp" class=" w-10 visit-img" alt="...">
-                <img src="./imgs/ba22.webp" class=" w-10 visit-img" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./imgs/ba22.webp" class=" w-10 visit-img" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./imgs/ba19.webp" class=" w-10 visit-img" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./imgs/ba20.webp" class=" w-10 visit-img" alt="...">
-              </div>
+                <div class="carousel-item active flex">
+                    <img src="./imgs/ba20.webp" class=" w-10 visit-img" alt="...">
+                    <img src="./imgs/ba21.webp" class=" w-10 visit-img" alt="...">
+                    <img src="./imgs/ba21.webp" class=" w-10 visit-img" alt="...">
+                    <img src="./imgs/ba21.webp" class=" w-10 visit-img" alt="...">
+                    <img src="./imgs/ba21.webp" class=" w-10 visit-img" alt="...">
+                </div>
+                <div class="carousel-item flex">
+                    <img src="./imgs/ba21.webp" class=" w-10 visit-img" alt="...">
+                    <img src="./imgs/ba22.webp" class=" w-10 visit-img" alt="...">
+                    <img src="./imgs/ba22.webp" class=" w-10 visit-img" alt="...">
+                    <img src="./imgs/ba22.webp" class=" w-10 visit-img" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./imgs/ba22.webp" class=" w-10 visit-img" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./imgs/ba19.webp" class=" w-10 visit-img" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./imgs/ba20.webp" class=" w-10 visit-img" alt="...">
+                </div>
             </div>
-            <button class="carousel-control-prev prev-btn" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+            <button class="carousel-control-prev prev-btn" type="button" data-bs-target="#carouselExample"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next prev-btn" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+            <button class="carousel-control-next prev-btn" type="button" data-bs-target="#carouselExample"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
             </button>
-          </div>
-          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        </div>
+
+        <div class="about-section flex">
+            <div class="about-section-dis">
+                <p class="mb-4 description">OUR ABOUT US</p>
+                <h3 class="mb-4">Ice Cream Drinks</h3>
+                <p class="mb-4 description">Summer brings with it the terrible heat, making everyone feel sluggish and <br> uncomfortable. In that
+                    weather, a glass of soft drink or a few ice cream cones is a <br> choice not to be missed
+                    <br>
+                    <br>
+                    However, not everyone knows all about that beverage. Let's climb the "time machine" <br> and discover all
+                    the history of cool ice cream!
+                    <br><br>
+
+                    Roman Emperor Nero was the first to eat ice cream. At a great party in 54, he came <br> up with an
+                    extremely strange dessert with the name "sweet snow". This dish is a <br> precursor to today's modern ice
+                    cream, it is made from the snow on the top of the <br> Apennine mountains and marinated many times with
+                    fruit and honey.
+                </p>
+
+            </div>
+            <div>
+                <img src="./imgs/ba-1.webp" alt="">
+            </div>
+
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
