--- a/index.html
+++ b/index.html
@@ -289,17 +289,21 @@
             <div class="about-section-dis">
                 <p class="mb-4 description">OUR ABOUT US</p>
                 <h3 class="mb-4">Ice Cream Drinks</h3>
-                <p class="mb-4 description">Summer brings with it the terrible heat, making everyone feel sluggish and <br> uncomfortable. In that
+                <p class="mb-4 description">Summer brings with it the terrible heat, making everyone feel sluggish and
+                    <br> uncomfortable. In that
                     weather, a glass of soft drink or a few ice cream cones is a <br> choice not to be missed
                     <br>
                     <br>
-                    However, not everyone knows all about that beverage. Let's climb the "time machine" <br> and discover all
+                    However, not everyone knows all about that beverage. Let's climb the "time machine" <br> and
+                    discover all
                     the history of cool ice cream!
                     <br><br>
 
                     Roman Emperor Nero was the first to eat ice cream. At a great party in 54, he came <br> up with an
-                    extremely strange dessert with the name "sweet snow". This dish is a <br> precursor to today's modern ice
-                    cream, it is made from the snow on the top of the <br> Apennine mountains and marinated many times with
+                    extremely strange dessert with the name "sweet snow". This dish is a <br> precursor to today's
+                    modern ice
+                    cream, it is made from the snow on the top of the <br> Apennine mountains and marinated many times
+                    with
                     fruit and honey.
                 </p>
 
@@ -307,6 +311,85 @@
             <div>
                 <img src="./imgs/ba-1.webp" alt="">
             </div>
+        </div>
+
+
+
+
+        <div class="trending mt-4">
+            <h3 class="trend-label"> HOT DEALS</h3>
+            <div class="row  ">
+
+                <div class="flavour-card col col-md-2 col-lg-3">
+                    <div>
+                        <img src="./imgs/menu-card/Creamy-Cake.jpg" class="flavour-img" alt="">
+                    </div>
+                    <div class="effect-hover">
+                        <img src="./icons/menupage-icons/shopping-bag.png" height="20px">
+                        <img src="./icons/menupage-icons/search.png" height="20px" alt="">
+                        <img src="./icons/menupage-icons/wishlist.png" height="20px" alt="">
+                    </div>
+                    <div class="flavour-description">
+                        Creamy Cake
+                        <br>
+                        <p class="flavour-price">₹ 260.00 </p>
+                    </div>
+                </div>
+
+                <div class="flavour-card col col-md-2 col-lg-3">
+                    <div>
+                        <img src="./imgs/menu-card/Creamy-Cake.jpg" class="flavour-img" alt="">
+                    </div>
+                    <div class="effect-hover">
+                        <img src="./icons/menupage-icons/shopping-bag.png" height="20px">
+                        <img src="./icons/menupage-icons/search.png" height="20px" alt="">
+                        <img src="./icons/menupage-icons/wishlist.png" height="20px" alt="">
+                    </div>
+                    <div class="flavour-description">
+                        Creamy Cake
+                        <br>
+                        <p class="flavour-price">₹ 260.00 </p>
+                    </div>
+                </div>
+
+
+                <div class="flavour-card col col-md-2 col-lg-3">
+                    <div>
+                        <img src="./imgs/menu-card/Creamy-Cake.jpg" class="flavour-img" alt="">
+                    </div>
+                    <div class="effect-hover">
+                        <img src="./icons/menupage-icons/shopping-bag.png" height="20px">
+                        <img src="./icons/menupage-icons/search.png" height="20px" alt="">
+                        <img src="./icons/menupage-icons/wishlist.png" height="20px" alt="">
+                    </div>
+                    <div class="flavour-description">
+                        Creamy Cake
+                        <br>
+                        <p class="flavour-price">₹ 260.00 </p>
+                    </div>
+                </div>
+
+
+                <div class="flavour-card col col-md-2 col-lg-3">
+                    <div>
+                        <img src="./imgs/menu-card/Creamy-Cake.jpg" class="flavour-img" alt="">
+                    </div>
+                    <div class="effect-hover">
+                        <img src="./icons/menupage-icons/shopping-bag.png" height="20px">
+                        <img src="./icons/menupage-icons/search.png" height="20px" alt="">
+                        <img src="./icons/menupage-icons/wishlist.png" height="20px" alt="">
+                    </div>
+                    <div class="flavour-description">
+                        Creamy Cake
+                        <br>
+                        <p class="flavour-price">₹ 260.00 </p>
+                    </div>
+                </div>
+            </div>
+
+
+
+
 
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
