changes in index

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <span class="heading">Style Destination</span>
                 <h1>Taste From The </h1>
                 <h1>Good Old Days.</h1>
-                <button class="buyNow-btn">SHOP NOW</button>
+                <button class="buyNow-btn1">SHOP NOW</button>
             </div>
 
         </div>
