some change in index

--- a/index.html
+++ b/index.html
@@ -235,13 +235,28 @@
             </div>
         </div>
 
-
+<!-- 
         <div class="menu">
             <span class="ms-5 mt-6">ICE CREAM MENU</span>
             <h2>Take The Experience Of Our Delightful</h2>
             <h2>Ice Cream Menu
             </h2>
 
+        </div> -->
+        <div class="row">
+            <div class="flex ">
+                <div  class="img-size">
+                    <img src="./imgs/ba16.webp" class="img-size1" alt="">
+                </div>
+                <div  style="margin: auto;">
+                    <iframe width="874" height="492" src="https://www.youtube.com/embed/DWzXg_TcMnY?autoplay=1&loop=1
+                    <table id="icecreamTable" class="table table-striped text-center">  </iframe>
+
+                </div>
+                <div>
+                    <img src="./imgs/ba18.webp" class="img-size" alt="">
+                </div>
+            </div>
         </div>
 
 
