some more changes in index

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             </h2>
 
         </div> -->
-        <div class="row">
+        <div class="margin-top">
             <div class="flex ">
                 <div  class="img-size">
                     <img src="./imgs/ba16.webp" class="img-size1" alt="">
@@ -254,8 +254,25 @@
 
                 </div>
                 <div>
-                    <img src="./imgs/ba18.webp" class="img-size" alt="">
+                    <img src="./imgs/ba18.webp" class="img-size1" alt="">
                 </div>
+            </div>
+            <!--  -->
+            <div class="flex ">
+                <div  style="margin: auto;">
+                    <iframe width="874" height="492" src="https://www.youtube.com/embed/DWzXg_TcMnY?autoplay=1&loop=1
+                    <table id="icecreamTable" class="table table-striped text-center">  </iframe>
+
+                </div>
+                <div>
+                    <img src="./imgs/ba17.webp" class="img-size2" alt="">
+                </div>
+                <div  style="margin: auto;">
+                    <iframe width="874" height="492" src="https://www.youtube.com/embed/DWzXg_TcMnY?autoplay=1&loop=1
+                    <table id="icecreamTable" class="table table-striped text-center">  </iframe>
+
+                </div>
+              
             </div>
         </div>
 
