--- a/pages/buy_now.html
+++ b/pages/buy_now.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buy-Now-Form</title>
-    <link rel="stylesheet" href="buy_now.css">
+    <link rel="stylesheet" href="/css/buy_now.css">
 
 </head>
 <body>
@@ -20,6 +20,6 @@
 
   <button type="submit">Submit</button>
   </form>
-  <script src="buy_now.js"></script>
+  <script src="/JS/buy_now.js"></script>
   </body>
   </html>  
