javascript added for const stars

--- a/pages/review_page.html
+++ b/pages/review_page.html
@@ -31,6 +31,13 @@
 		<div class="reviews" id="reviews">
 		</div>
 	</div>
+	<script>
+		const stars=document.querySelectorAll(".star");
+		const rating=document.getElementById("rating");
+		const reviewText=document.getElementById("review");
+		const submitBtn=document.getElementById("submit");
+		const reviewsContainer=document.getElementById("reviews");
+	</script>
 </body>
 </html>
 
