js function added

--- a/pages/review_page.html
+++ b/pages/review_page.html
@@ -79,8 +79,22 @@ submitBtn.addEventListener("click",()=> {
 		stars.forEach((s)=> s.classList.remove("one","two","three","four","five","selected"));
 	}
 });
-
-
+function getStarColorClass(value){
+	switch(value){
+		case 1:
+		return "one";
+		case 2:
+			return "two";
+			case 3:
+				return "three";
+				case 4:
+					return "four";
+					case 5:
+						return "five";
+						default:
+							return "";
+	}
+}
 	</script>
 </body>
 </html>
