--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             </h2>
 
         </div> -->
-        <div class="margin-top">
+        <div class="margin-top margin-bottom">
             <div class="flex img-cont">
                 <div  class="img-size">
                     <img src="./imgs/ba16.webp" class="img-size1" alt="">
