follow us added

--- a/pages/contact_page.html
+++ b/pages/contact_page.html
@@ -10,13 +10,13 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="background-color: #f9fad5">
     <div class="header">
         <div class="head">Contact Us </div>
     </div>
     <iframe
         src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d1891.8577531523456!2d73.9694876!3d18.4965414!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTjCsDI5JzQ2LjciTiA3M8KwNTgnMTIuNyJF!5e0!3m2!1sen!2sin!4v1712574417177!5m2!1sen!2sin"
-        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        width="100%" height="480" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
     <div class="contact-main">
 
@@ -34,8 +34,8 @@
             <a href="https://maps.app.goo.gl/Rmh5xuF63HXWgcGK7"
                 class="a">&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;404, Laxmi Heights, Above Lotus
                 Multi<br>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;speciality Hospital Manjari BK, pune - 412307
-            </a>
-
+            </a><br><br><br>
+            
 
         </div>
 
@@ -52,8 +52,17 @@
                 <button class="button">Send</button><br><br>
             </form>
         </div>
-    </div>
-
+    </div><br>
+    <center><div><p style="font-size: 30px; font-weight:600; margin-left:10px">Follow Us</p>
+            
+            <a href="https://www.instagram.com/roadtocode4u" class="a"
+            target="_blank"><i class="fa-brands fa-instagram"></i></a>&emsp;<a
+            href="https://www.linkedin.com/company/roadtocode4u/" class="a" target="_blank"><i
+                class="fa-brands fa-linkedin"></i></a>&emsp;<a href="https://wa.me/8805803087" class="a"
+            target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+        &emsp;<a href="https://github.com/roadtocode4u" class="a" target="_blank"><i
+                class="fa-brands fa-github"></i></a>
+            </div></center>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
