--- a/pages/buy_now.html
+++ b/pages/buy_now.html
@@ -16,7 +16,7 @@
   <input type="email" id="email" name="email" required><br><br>
 
      <label for="address">address:</lable>
-  <input type="text" id="fullName" name="fullName" required><br><br>
+  <input type="text" id="address" name="address" required><br><br>
 
   <button type="submit">Submit</button>
   </form>
