--- a/pages/buy_now.html
+++ b/pages/buy_now.html
@@ -18,7 +18,7 @@
      <label for="address">address:</lable>
   <input type="text" id="address" name="address" required><br><br>
 
-  <button type="submit">Submit</button>
+  <button type="submit">Comfirm-Order</button>
   </form>
   <script src="/JS/buy_now.js"></script>
   </body>
