--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -8,7 +8,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body >
+<body style="background-color:aliceblue;">
   <header>
     <h1>Ice Cream Parlor</h1>
   </header>
@@ -106,9 +106,9 @@
     <img src="./../icons/menupage-icons/filter.png" height="20px" alt="">Filter
   </div>
 
-  <div class="flavour-container">
+  <div class="flavour-container" >
 <div class="row  ">
-    <div class=" flavour-card col col-md-2 col-lg-4">
+    <div class=" flavour-card col col-md-2 col-lg-4" >
         <div>
            <img src="./../imgs/menu-card/Cereal-And-Milk.jpg" class="flavour-img" alt="">
         </div>
