--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
 
 
-        <div id="carouselExample" class="carousel slide">
+        <!-- <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active flex">
                     <img src="./imgs/ba20.webp" class=" w-10 visit-img" alt="...">
@@ -344,7 +344,7 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
-        </div>
+        </div> -->
 
         <div class="about-section flex">
             <div class="about-section-dis">
