--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 
         <div class="trending mt-4">
             <h3 class="trend-label"> HOT DEALS</h3>
-            <div class="row  ">
+            <div class="row ">
 
                 <div class="flavour-card col col-md-2 col-lg-3">
                     <div>
@@ -446,7 +446,9 @@
                         <p class="flavour-price">₹ 260.00 </p>
                     </div>
                 </div>
+               
             </div>
+            <button class="product-btn">ALL PRODUCTS</button>
 
 
 
