--- a/index.html
+++ b/index.html
@@ -432,10 +432,14 @@
                
             </div>
              <button class="product-btn">ALL PRODUCTS</button>
-
-
-
-
+        </div>
+        <div class="menu">
+            <div class="menu-dis">
+            <h3>ICE CREAM MENU</h3>
+            <h1>Take The Experience Of Our Delightful</h1>
+            <h1>Ice Cream Menu</h1></div>
+        </div>
+           
 
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
