--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -229,5 +229,6 @@
        
     }
   </script>
+  <script src="https://kit.fontawesome.com/029a190c6b.js" crossorigin="anonymous"></script>
 </body>
 </html>
