dark and light mode css is added .

--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -11,6 +11,7 @@
 <body style="background-color:aliceblue;">
   <header>
     <h1>Ice Cream Parlor</h1>
+    <div class="mode-container"><img src="./../png/menu-Card/dark-mode.png" id="mode" height="20px" alt=""></div>
   </header>
  <div class="name-container text-light ">
    <h2 class="page-heading text-center "> Products</h2>
