--- a/pages/buy_now.html
+++ b/pages/buy_now.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <form id="buyNowForm">
-    <label for="fullName">Full Name:</label>
+    <label for="fullName">Full-Name:</label>
     <input type="text" id="fullName" name="fullName" required><br><br>
 
     <label for="email">Email:</label>
